--- a/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
@@ -30,7 +30,7 @@
                         @Html.AntiForgeryToken()
                         @Html.HiddenFor(Model => Model.BookingReference)
                         @Html.HiddenFor(Model => Model.ReaderTicket)
-                        @Html.HiddenFor(Model => Model.SeatType)
+                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
                         @Html.HiddenFor(Model => Model.BookingStartDate)
                         @Html.HiddenFor(Model => Model.SeatNumber)
                         <fieldset>
