--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Manage document order";
 }
-@model BookingViewModel
+@model OrderCompleteViewModel
 
 <h1 class="display-4">5. Order complete</h1>
 
@@ -99,7 +99,7 @@
                         @Html.AntiForgeryToken()
                         @Html.HiddenFor(Model => Model.BookingReference)
                         @Html.HiddenFor(Model => Model.ReaderTicket)
-                        @Html.HiddenFor(Model => Model.SeatType)
+                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
                         @Html.HiddenFor(Model => Model.BookingStartDate)
                         @Html.HiddenFor(Model => Model.SeatNumber)
                         <button type="submit" class="btn-link">Cancel this booking ></button>
