--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Order documents";
 }
 
-@model BookingViewModel
+@model DocumentOrderViewModel
 
 <h1 class="display-4">4. Order documents for your visit</h1>
 
@@ -96,7 +96,7 @@
                         @Html.AntiForgeryToken()
                         @Html.HiddenFor(Model => Model.BookingReference)
                         @Html.Hidden("readerticket", Model.ReaderTicket)
-                        @Html.HiddenFor(Model => Model.SeatType)
+                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
                         @Html.HiddenFor(Model => Model.BookingStartDate)
                         @Html.HiddenFor(Model => Model.SeatNumber)
                         <button type="submit" class="btn-link">Cancel this booking ></button>
@@ -120,16 +120,21 @@
         <div class="order-form">
             <div class="row">
                 <div class="col-md-12">
-                    <form action="@Url.Action("OrderComplete", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST">
+                    <form action="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST">
                         @Html.AntiForgeryToken()
+                        @Html.HiddenFor(Model => Model.BookingStartDate)
+                        @Html.HiddenFor(Model => Model.CompleteByDate)
+                        @Html.HiddenFor(Model => Model.CompleteByDate)
+                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
+                        @Html.HiddenFor(Model => Model.SeatNumber)
+
                         @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                         {
-                            @await Html.PartialAsync("Partials/_StandardOrderForm")
+                            @await Html.PartialAsync("Partials/_StandardOrderForm", Model)
                         }
-
                         else
                         {
-                            @await Html.PartialAsync("Partials/_BulkOrderForm")
+                            @await Html.PartialAsync("Partials/_BulkOrderForm", Model)
                         }
 
                         <fieldset>
