--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -114,7 +114,7 @@
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(Model => Model.BookingReference)
                     @Html.Hidden("readerticket", Model.ReaderTicket)
-                    @Html.HiddenFor(Model => Model.SeatType)
+                    @Html.Hidden("seattype", Model.SeatType.ToStringURL())
                     @Html.HiddenFor(Model => Model.BookingStartDate)
                     @Html.HiddenFor(Model => Model.SeatNumber)
                     <button type="submit" class="button">Cancel this booking</button>
@@ -127,6 +127,12 @@
         <p class="no-margin">
             You can add or remove documents from this order <span class="bold-text">until @($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST)</span>.
         </p>
+        @if (Model.MinimumRequiredDocuments > 0)
+        {
+            <p class="no-margin">
+                You need to add at least @Model.MinimumRequiredDocuments more document before the deadline to avoid your order being cancelled
+            </p>
+        }
     </div>
 
         <div class="order-form">
@@ -165,9 +171,8 @@
                             We cannot guarantee that all of the research materials will
                             be available.
                         </p>
-                        <textarea id="additional-reqs" name="additional-reqs"></textarea>
+                        @Html.TextAreaFor(Model => Model.AdditionalRequirements, new { id = "additional-reqs" })
                     </fieldset>
-
                     <button class="button" type="submit">Save and review</button>
                 </form>
             </div>
