--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -1,12 +1,6 @@
 ﻿@model DocumentOrderViewModel
 <fieldset>
     <legend>Enter up to 12 documents (e.g. FO 371/114865)</legend>
-    @if (Model.MinimumRequiredDocuments > 0)
-    {
-        <div class="prompt-grey full-width">
-            You need to add at least @Model.MinimumRequiredDocuments more document before the deadline to avoid your order being cancelled
-        </div>
-    }
     <p class="helper-text no-margin">Order between 1 and 12 documents.</p>
     <p class="helper-text">
         <a href="https://discovery.nationalarchives.gov.uk/"
@@ -154,7 +148,7 @@
 
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
-            <label for="reserve-1">1</label>
+            <label for="reserve-1">A</label>
             @Html.TextBoxFor(Model => Model.ReserveDocumentReference1)
 
             @if (ViewData.ModelState["ReserveDocumentReference1"]?.Errors.Count() > 0)
@@ -164,7 +158,7 @@
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-2">2</label>
+            <label for="reserve-2">B</label>
             @Html.TextBoxFor(Model => Model.ReserveDocumentReference2)
 
             @if (ViewData.ModelState["ReserveDocumentReference2"]?.Errors.Count() > 0)
@@ -174,7 +168,7 @@
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-3">3</label>
+            <label for="reserve-3">C</label>
             @Html.TextBoxFor(Model => Model.ReserveDocumentReference3)
 
             @if (ViewData.ModelState["ReserveDocumentReference3"]?.Errors.Count() > 0)
