--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -40,6 +40,14 @@ a.button {
   }
 }
 
+details {
+    summary {
+        h4 {
+            display: inline-block;
+        }
+    }
+}
+
 small {
   display: block;
 }
