--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -8231,6 +8231,9 @@ form input[type=checkbox] {
   color: #fff;
   outline: none;
 }
+#date-selection ul li.date button:hover span span:last-child {
+  color: #fff;
+}
 #date-selection ul li.date .no-availability {
   color: #134571;
   font-weight: bold;
