--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -3,7 +3,6 @@
 @using book_a_reading_room_visit.web.Models
 @{
     ViewData["Title"] = "Booking confirmation";
-    string timeZoneText = Model.CompleteByDate.Value.IsDaylightSavingTime() ? "British Summer Time (BST)" : "Greenwich Mean Time (GMT)";
 }
 @model BookingViewModel
 
@@ -37,13 +36,13 @@
             </div>
         </div>
     </div>
-
+    <a href="C:\Projects\ds-book-a-reading-room-visit\book-a-reading-room-visit.web\Views\Booking\BookingConfirmation.cshtml">C:\Projects\ds-book-a-reading-room-visit\book-a-reading-room-visit.web\Views\Booking\BookingConfirmation.cshtml</a>
     <div class="text-center">
         <div class="row">
             <div class="col-md-12">
                 <div class="prompt-grey full-width warning-panel">
                     To confirm your booking, complete the document order form by
-                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") @timeZoneText.</span>
+                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST).</span>
                 </div>
             </div>
         </div>
