--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -2,10 +2,9 @@
 @using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
 @{
-    ViewData["Title"] = "Booking confirmation";
+ViewData["Title"] = "Booking confirmation";
 }
 @model BookingViewModel
-
 
 <h1 class="display-4">3. Reservation confirmation</h1>
 
@@ -36,7 +35,7 @@
             </div>
         </div>
     </div>
-    <a href="C:\Projects\ds-book-a-reading-room-visit\book-a-reading-room-visit.web\Views\Booking\BookingConfirmation.cshtml">C:\Projects\ds-book-a-reading-room-visit\book-a-reading-room-visit.web\Views\Booking\BookingConfirmation.cshtml</a>
+
     <div class="text-center">
         <div class="row">
             <div class="col-md-12">
@@ -99,7 +98,7 @@
             <div class="col-md-12">
                 <p>
                     If you provided an email address as part of your booking, a direct link to this form is also in your reservation confirmation email, so you can return to your document order at any point before
-                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") timeZoneText</span>. If you can’t see the reservation confirmation email in your inbox, check your spam and junk email folders.
+                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST)</span>. If you can’t see the reservation confirmation email in your inbox, check your spam and junk email folders.
                 </p>
                 <p>If you did not provide an email address, use the <a target="_blank" rel="noreferrer noopener" href="#">Return to booking form</a> to complete your document order at any point before the deadline.</p>
             </div>
