--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -25,6 +25,11 @@
         </div>
     </section>
 
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <span class="error-message full-width">Something went wrong. Please check your details.</span>
+    }
+
     <div class="heading align-left">
         <div class="row">
             <div class="col-md-12">
@@ -135,48 +140,48 @@
         }
     </div>
 
-        <div class="order-form">
-            <div class="row">
-                <div class="col-md-12">
-                    <form action="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST">
-                        @Html.AntiForgeryToken()
-                        @Html.HiddenFor(Model => Model.BookingStartDate)
-                        @Html.HiddenFor(Model => Model.CompleteByDate)
-                        @Html.HiddenFor(Model => Model.CompleteByDate)
-                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
-                        @Html.HiddenFor(Model => Model.SeatNumber)
+    <div class="order-form">
+        <div class="row">
+            <div class="col-md-12">
+                <form action="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST">
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(Model => Model.BookingStartDate)
+                    @Html.HiddenFor(Model => Model.CompleteByDate)
+                    @Html.HiddenFor(Model => Model.CompleteByDate)
+                    @Html.Hidden("seattype", Model.SeatType.ToStringURL())
+                    @Html.HiddenFor(Model => Model.SeatNumber)
 
-                        @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                    @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                    {
+                        @await Html.PartialAsync("Partials/_StandardOrderForm", Model)
+                    }
+                    else
+                    {
+                        @await Html.PartialAsync("Partials/_BulkOrderForm", Model)
+                    }
+
+                    <fieldset>
+                        <legend>
+                            <label for="additional-reqs">Access needs and research requests</label>
+                        </legend>
+
+                        <p class="helper-text">
+                            Tell us about your access needs, including if you have
+                            mobility access requirements. You can also use this space to tell us your
+                            research requests, including library materials, microfilm/microfiche, or
+                            finding/preservation aids that are normally available on self-service.
+                        </p>
+
+                        <p class="helper-text">
+                            We cannot guarantee that all of the research materials will
+                            be available.
+                        </p>
+                        @Html.TextAreaFor(Model => Model.AdditionalRequirements, new { id = "additional-reqs" })
+                        @if (ViewData.ModelState["AdditionalRequirements"]?.Errors.Count() > 0)
                         {
-                            @await Html.PartialAsync("Partials/_StandardOrderForm", Model)
+                            @Html.ValidationMessageFor(Model => Model.AdditionalRequirements, "", new { @class = "form-error" })
                         }
-                        else
-                        {
-                            @await Html.PartialAsync("Partials/_BulkOrderForm", Model)
-                        }
-
-                        <fieldset>
-                            <legend>
-                                <label for="additional-reqs">Access needs and research requests</label>
-                            </legend>
-
-                            <p class="helper-text">
-                                Tell us about your access needs, including if you have
-                                mobility access requirements. You can also use this space to tell us your
-                                research requests, including library materials, microfilm/microfiche, or
-                                finding/preservation aids that are normally available on self-service.
-                            </p>
-
-                            <p class="helper-text">
-                                We cannot guarantee that all of the research materials will
-                                be available.
-                            </p>
-                            @Html.TextAreaFor(Model => Model.AdditionalRequirements, new { id = "additional-reqs" })
-                            @if (ViewData.ModelState["AdditionalRequirements"]?.Errors.Count() > 0)
-                            {
-                                @Html.ValidationMessageFor(Model => Model.AdditionalRequirements, "", new { @class = "form-error" })
-                            }
-                        </fieldset>
+                    </fieldset>
                     <button class="button" type="submit">Save and review</button>
                 </form>
             </div>
