--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -8012,7 +8012,7 @@ form input[type=checkbox] {
   background: #f9f7e2;
   width: 100%;
   max-width: 480px;
-  margin-left: 40px;
+  margin: 2em 0 0 0;
 }
 
 .helper-text {
