--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -171,7 +171,7 @@ form {
   background: #f9f7e2;
   width: 100%;
   max-width: 480px;
-  margin-left: 40px;
+  margin: 2em 0 0 0;
 }
 
 .helper-text {
