--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                 <div class="col-md-12">
                     <h2>Before you book</h2>
                     <p>You will need your reader’s ticket number to complete your booking.</p>
-                    <a href="#">Register for or renew a reader’s ticket</a>
+                    <a target="_blank" rel="noreferrer noopener" href="@Environment.GetEnvironmentVariable("ReaderRegisterURL")">Register for or renew a reader’s ticket</a>
                 </div>
             </div>
         </div>
