--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -63,10 +63,10 @@ ViewData["Title"] = "Booking confirmation";
                                 @(Model.BookingType == BookingTypes.StandardOrderVisit ? "Standard visit" : "Bulk order visit")
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">Reading room</th>
-                            @if (Model.BookingType == BookingTypes.StandardOrderVisit)
-                            {
+                        @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                        {
+                            <tr>
+                                <th scope="row">Reading room</th>
                                 @if (Model.SeatType == SeatTypes.StdRRSeat)
                                 {
                                     <td>Document reading room (All seats have camera stands)</td>
@@ -75,13 +75,8 @@ ViewData["Title"] = "Booking confirmation";
                                 {
                                     <td>Map and large document reading room</td>
                                 }
-
-                            }
-                            else
-                            {
-                                <td>Map and large document reading room</td>
-                            }
-                        </tr>
+                            </tr>
+                        }
                         <tr>
                             <th scope="row">Seat number</th>
                             <td>
@@ -100,7 +95,7 @@ ViewData["Title"] = "Booking confirmation";
                     If you provided an email address as part of your booking, a direct link to this form is also in your reservation confirmation email, so you can return to your document order at any point before
                     <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST)</span>. If you can’t see the reservation confirmation email in your inbox, check your spam and junk email folders.
                 </p>
-                <p>If you did not provide an email address, use the <a target="_blank" rel="noreferrer noopener" href="#">Return to booking form</a> to complete your document order at any point before the deadline.</p>
+                <p>If you did not provide an email address, use the <a target="_blank" rel="noreferrer noopener" href="@Url.Action("ReturnToBooking", "Booking")">Return to booking form</a> to complete your document order at any point before the deadline.</p>
             </div>
         </div>
     </div>
@@ -110,7 +105,7 @@ ViewData["Title"] = "Booking confirmation";
             <div class="col-md-12">
                 <a class="button primary" href="@Url.Action("OrderDocuments", "DocumentOrder",
                                         new { bookingType = @Model.BookingType.ToStringURL(), bookingReference = Model.BookingReference, readerTicket = Model.ReaderTicket } )">Continue to your document order</a>
-                <a class="button secondary" href="@Url.Action("Booking", "ContinueLater")">I'd like to continue later</a>
+                <a class="button secondary" href="@Url.Action("ContinueLater", "DocumentOrder", new { bookingReference = Model.BookingReference })">I'd like to continue later</a>
             </div>
         </div>
     </div>
