--- a/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
@@ -31,17 +31,20 @@
                                 <th scope="row">Booking reference</th>
                                 <td>@Model.BookingReference</td>
                             </tr>
-                            <tr>
-                                <th scope="row">Reading room</th>
-                                @if (Model.SeatType == SeatTypes.StdRRSeat)
-                                {
-                                    <td>Document reading room (All seats have camera stands)</td>
-                                }
-                                else
-                                {
-                                    <td>Map and large document reading room</td>
-                                }
-                            </tr>
+                            @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                            {
+                                <tr>
+                                    <th scope="row">Reading room</th>
+                                    @if (Model.SeatType == SeatTypes.StdRRSeat)
+                                    {
+                                        <td>Document reading room (All seats have camera stands)</td>
+                                    }
+                                    else
+                                    {
+                                        <td>Map and large document reading room</td>
+                                    }
+                                </tr>
+                            }
                             <tr>
                                 <th scope="row">Visit date</th>
                                 <td>@Model.BookingStartDate.ToString("dddd dd MMMM yyyy")</td>
