Added reader ticket validation with more detail way included some editorial fixes

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -100,16 +100,10 @@
                 {
                     <div class="prompt-white">
                         <details open>
-                            <summary><h4>Which room will I be in?</h4></summary>
-                            <p class="helper-text no-margin">All of our bulk orders are in the Map and Large document reading room</p>
-                        </details>
-                    </div>
-                    <div class="prompt-white">
-                        <details open>
                             <summary><h4>Are camera stands available?</h4></summary>
                             <p class="helper-text no-margin">
                                 Some camera stands are available. If you need one, please tell us in the 'Additional access requirements or
-                                research requests' box when you complete your document order
+                                research requests' box when you complete your document order.
                             </p>
                         </details>
                     </div>
