--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                     </p>
 
                     <a href="#">
-                        Find out more about how to book and what to expect
+                        Find out more about how to book and what to expect.
                     </a>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                         </div>
 
                         <ul>
-                            <li>Documents can be from <span class="bold-text">multiple series</span><br><i>e.g. ADM 22 and C 142</i></li>
+                            <li>Documents can be from <span class="bold-text">multiple series</span><br>e.g. ADM 22 and C 142</li>
                             <li>1-day visit</li>
                             <li>Up to 12 documents</li>
                             <li>Camera stands and computer access available</li>
@@ -63,7 +63,7 @@
                         </div>
 
                         <ul>
-                            <li>Documents have to be from <span class="bold-text">one series</span><br><i>e.g. ADM 22</i></li>
+                            <li>Documents have to be from <span class="bold-text">one series</span><br>e.g. ADM 22</li>
                             <li>2-day visit</li>
                             <li>Between 20 - 40 documents</li>
                             <li>Camera stands and computer access available</li>
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Return to your booking</h2>
-                    <p>See your order details for an existing visit using your booking reference and reader’s ticket number.</p>
+                    <p>See order details for an upcoming visit using your booking reference and reader’s ticket number.</p>
                     <a href="@Url.Action("ReturnToBooking", "Booking")">View or edit your document order</a>
                 </div>
             </div>
