--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -85,7 +85,7 @@
 
                         <div class="prompt-white">
                             <details open>
-                                <summary><h4>Are accessible seats available?</h4></summary>
+                                <summary>Are accessible seats available?</summary>
                                 <p class="helper-text no-margin no-padding">
                                     All seats in our reading rooms are accessible. You can tell us about your access needs when you order your documents in step 4.
                                 </p>
@@ -100,7 +100,7 @@
                 {
                     <div class="prompt-white">
                         <details open>
-                            <summary><h4>Are camera stands available?</h4></summary>
+                            <summary>Are camera stands available?</summary>
                             <p class="helper-text no-margin">
                                 Some camera stands are available. If you need one, please tell us in the 'Additional access requirements or
                                 research requests' box when you complete your document order.
@@ -109,7 +109,7 @@
                     </div>
                     <div class="prompt-white">
                         <details open>
-                            <summary><h4>Are accessible seats available?</h4></summary>
+                            <summary>Are accessible seats available?</summary>
                             <p class="helper-text no-margin">
                                 All seats in our reading rooms are accessible. You can tell us about your access needs when you order your
                                 documents in step 4.
