--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -394,6 +394,12 @@ form {
                     background-color: #000;
                     color: #fff;
                     outline: none;
+
+                    span {
+                        span:last-child {
+                            color: #fff;
+                        }
+                    }
                 }
             }
 
